lab1/Test/L1-A-12-91.output
Error Type A at Line 7
Error Type A at Line 40
Error Type B at Line 47
