lab1/Test/L1-A-12-91.cmm
struct n5rCG8 s0kaDY6zuak 
;
struct e3FswCbw8 sarrqFsDbMBeX0 ( int ef , int zuafnAmKqb4 
  ) {
  struct JLnPKarlxbcaIpEtcH {
  }iW_es1hUXL = vE2mPv5eGJw_rbYNOxX1 = C8XC < g3AVeWr1TZfP 
    - bNQ1Ay0x_RK * iEKXVVW7f6TwG2Do %[ iN9W9ifj || YMJmmMl93xxOoOkkR 
    && INkgGBtVWdk == Mf6e / - ! s ( R2nud64LdFj1vSMiES 
    = HDvoHHUgCGc0QgTBOWoP = dfjpHkf_ctL1AFPt || M2z5nZT 
    != nRG_aKYCVIyCkIbiA2d ( CM8316tkm6_SIBmwP , AqeAi5UO8mPRis 
    || BRv >= W + ( Vr49kV62jOrLG7E5 > oxqqLRp + ausQR 
    ( eVKr , UxfUkbgm_eA && BEBQOKr8DTL + lG9mzT3Ef5a2ot1Qqr 
    ( tC6CAxpEvmOrC8vp = AR <= zIVIz9izLP1XxxD8RcWV * 
    - ! wlAS ) ) * - 1195855828.801131373 ) ) . T2mcd_x27oTCsksyYl 
    . MSAZPtrwiCIMEWTA2 / - 823589748 + at6pEYC21Y_g ( 
    ) ) ] , xW7TG8mZPqzqO3 [ 1615772648 ] ;
}
float ;
struct _8UsP TtKZdkt ( ) {
  while ( NkcMMnEw ) {
    return gpzfATldFprxmomPFTs ;
  }
  if ( JPkt2oI6t5u )   CvOmAgpG5mn ;

}
int KYnI_8 ( ) {
  int h7hiGHhVPACFaoRKT0V ;
}
int ;
struct UWhnB85Ft5onArKokt KN6CKzJ1VfCzVyIs , OQ8kInWf9ao89Asds 

;
int ;
int VO ( ) {
  struct {
    int uBz5cxOlg94uBgBk ;
    int EWtp4syqowM ;
    struct {
    }m42h ;
  }SYXgZKv33c ^;
}
int ;
int ;
int ;
int HW4V ( ) {
  if ( M )   zTGmjjWQkH27iyv5da6 ;
else   while ( zGVZ1GL7wqT ) }

}
int ;
int ZDYLAXaYYr1z0v90kf ( ) {
  VzmJyZPzlrmF9L ;
  JbStT3Xagn ;
  uPOerje2L ;
  if ( N1cBK )   Q4RbAELOeDiOS ;
else   if ( HQAxUVKmUVG_puAA )   PeYV_pESojMeC3 ;


}
int ;
